EM-6512 add pact test (#2526)